--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <h3 class="section-title">About Me</h3>
             <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
                 simple, clean and slick websites that provide real value to the end user. Thousands of clients have
-                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
-                clients requirements in our mata.</p>
+                procured exceptional results while working with me. Delivering work within time and budget which meets
+                clients requirements in our meta.</p>
             <div class="about-info-container">
                 <div class="about-info">
                     <p class="info-title">Name</p>
@@ -96,6 +96,52 @@
         <!--resume section-->
         <section>
             <h3 class="section-title">A summary of My Resume</h3>
+           <div class="resume-contain">
+            <div>
+                <div>
+                    <h3 class="resume-title">My Education</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="subtitle">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <hr>
+                    </div>
+                </div>
+                <div>
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="subtitle">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <hr>
+                </div>
+                <div>
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="subtitle">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
+                        <h4 class="title">Sr. Font End Developer</h4>
+                        <h5 class="subtitle">Apple Inc / 2020 - Current</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <hr>
+                </div>
+                <div>
+                        <h4 class="title">Jr. Font End Developer</h4>
+                        <h5 class="subtitle">Dribbble Inc / 2018 - 2022</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <hr>
+                </div>
+                <div>
+                        <h4 class="title">HTML Developer</h4>
+                        <h5 class="subtitle">Adobe Inc / 2017 - 2018</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+           </div>
+           <div class="resume-button">
+            <button class="button-primary">Download CV</button></div>
         </section>
     </main>
     <footer></footer>
