--- a/index.html
+++ b/index.html
@@ -143,6 +143,27 @@
            <div class="resume-button">
             <button class="button-primary">Download CV</button></div>
         </section>
+        <!-- contact section -->
+        <section class="contact">
+            <div class="section-title">
+                <h3>Lets Connect</h3>
+                <p class="contact-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <a href="">
+                    <img src="images/icons/facebook.png" alt="">
+                    <img src="images/icons/twitter.png" alt="">
+                    <img src="images/icons/insta.png" alt="">
+                </a>
+            </div>
+            <div class="section-title">
+                <h3>Let's massage me</h3>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Your Name">
+                    <input type="email" name="" id="" placeholder="Your Email">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Massage"></textarea>
+                    <input class="button-primary" type="submit" value="submit">
+                </form>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
