--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/cea16b2e35.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -29,7 +30,8 @@
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning because as to society
                     behaved moments.</p>
-                <button class="button-primary">Download CV</button>
+                <button class="button-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="contact-number"><i class="fa-solid fa-phone"></i> Contact </button>
             </div>
             <img src="images/hardy.png" alt="" class="banner-picture">
         </div>
@@ -141,7 +143,7 @@
             </div>
            </div>
            <div class="resume-button">
-            <button class="button-primary">Download CV</button></div>
+            <button class="button-primary"><i class="fa-solid fa-download"></i> Download CV</button></div>
         </section>
         <!-- contact section -->
         <section class="contact">
